--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mooli&display=swap" rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&display=swap" rel="stylesheet">
 </head>
 <body>
   <Main>
-    <header>
+    <header class="header">
       <section class="logotipo">
       <a href="./index.html"><img src="./Dechito/logotipo-Dechito.png" alt="logotipo-Dechito" width="140px"></a>
       </section>
@@ -43,9 +45,43 @@
     <section class="sub-title">
       <h2>Peluqueria y Estetica</h2>
     </section>
-    <section class="gif-A1">
-      <img src="./Dechito/gif-A1.gif" alt="Gif-peluqueria" width="400px">
+    <section id="Servicios">
+      <div class="grid-padre">
+        <div>
+          <img src="./Dechito/baño.png" alt="Baño canino" width="300px">
+          <h6>Baños</h6>
+        </div>
+        <div>
+          <img src="./Dechito/corte de pelo.png" alt=" corte de pelo" width="300px">
+          <h6>Cortes</h6>
+        </div>
+        <div>
+          <img src="./Dechito/despeje de zonas.png" alt="despeje" width="300px">
+          <h6>Despeje de zonas</h6>
+        </div>
+        <div>
+          <img src="./Dechito/perfumado.png" alt="despeje" width="300px">
+          <h6>Perfumado</h6>
+        </div>
+      </div>
     </section>
+    <footer>
+      <section id="datos">
+        <div class="datos">
+          <div>
+          <h6>Información</h6>
+          <a href="./peige/contacto.html"><p>¿Quienes Somos?</p></a>
+          <a href="./peige/ubicaccion.html"><p>¿Donnde Estamos?</p></a>
+          <a href="./peige/contacto.html"><p>Contacto</p></a>
+          </div>
+          <div>
+          <h6>Contacto</h6>
+          <p>+56 9 97179126</p>
+          <a href="#"><p>Gmail</p></a>
+        </div>
+        </div>
+      </section>
+    </footer>
   </Main>
   <script src="main.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.2/dist/umd/popper.min.js" integrity="sha384-q9CRHqZndzlxGLOj+xrdLDJa9ittGte1NksRmgJKeCV9DrM7Kz868XYqsKWPpAmn" crossorigin="anonymous"></script>
